--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "prompt>=0.4.1",
+]
 
 [build-system]
 requires = ["hatchling"]
@@ -15,3 +17,5 @@ packages = ["brain_games"]
 
 [project.scripts]
 brain-games = "brain_games.scripts.brain_games:main"
+
+
